apps/adguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.40
        ports:
        - containerPort: 53 #dns
          name: dns-tcp
          protocol: UDP
        - containerPort: 53 #dns
          name: dns-udp
          protocol: TCP
        - containerPort: 80 #web gui
          name: http
          protocol: TCP
        - containerPort: 3000
          name: http-init
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-conf
          mountPath: /opt/adguardhome/conf
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-data
      - name: adguard-conf
        persistentVolumeClaim:
          claimName: adguard-conf
