apps/adguard/base/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-tcp
  annotations:
    external-service: dns
    metallb.universe.tf/allow-shared-ip: "pihole-dns"
spec:
  selector:
    app: adguard
  ports:
  - protocol: TCP
    port: 53
    targetPort: 53
    name: dns
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-udp
  annotations:
    external-service: dns
    metallb.universe.tf/allow-shared-ip: "pihole-dns"
spec:
  selector:
    app: adguard
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
spec:
  selector:
    app: adguard
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dns.example.com`)
      services:
        - kind: TraefikService
          name: adguard-dashboard
